tests/purs/failing/InvalidViaType2.purs
-- @shouldFailWith InvalidViaType
module Main where

class C a

data D = D

derive via a instance cd :: C D
